--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -47,3 +47,19 @@
     top: 1;
     width: 70%;
 }
+.rayoImg {
+    animation:
+    rayo 5s infinite 0s;
+}
+
+@keyframes rayo {
+    0% {
+       transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(25px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
