--- a/src/components/HeroText/styles.css
+++ b/src/components/HeroText/styles.css
@@ -44,3 +44,14 @@
     z-index: 1;
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        color: white;
+    }
+    to {
+        opacity: 1;
+        color: aqua;
+    }
+}
+
