--- a/src/screens/SectionOne/styles.css
+++ b/src/screens/SectionOne/styles.css
@@ -3,4 +3,14 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    flex-direction: column;
+}
+.titleSectionOne {
+    color: white;
+    text-align: center;
+    font-family: "Bebas";
+    font-size: 5em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100.044%;
 }
