--- a/src/components/TextMove/styles.css
+++ b/src/components/TextMove/styles.css
@@ -1,12 +1,36 @@
+.textMoveContainer {
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    width: 100%;
+    display: flex;
+    height: 50vh;
+    align-items: center;
+}
 
+.textMoveWrapper {
+    display: flex;
+    animation: moveText 20s linear infinite;
+}
 
 .textMove {
     color: #292929;
     text-align: center;
-    text-shadow: 0px 4px 134px #000;
     font-family: "Bebas";
     font-size: 115px;
     font-style: normal;
     font-weight: 400;
-    line-height: 100.044%; 
+    line-height: 100.044%;
+    white-space: nowrap;
+    margin: 0;
+    padding: 0;
+}
+
+@keyframes moveText {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
