--- a/src/screens/SectionThree/styles.css
+++ b/src/screens/SectionThree/styles.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
 }
 .titleSectionThree {
     color: #FFF;
@@ -12,7 +13,7 @@
     font-size: 5em;
     font-style: normal;
     font-weight: 400;
-    line-height: 100.044%; /* 115.051px */
+    line-height: 100.044%; 
 }
 .subSectionThree {
     color: #FFF;
