--- a/src/components/HeroText/styles.css
+++ b/src/components/HeroText/styles.css
@@ -23,7 +23,7 @@
     color: #FFF;
     text-align: center;
     font-family: 'Poppins';
-    font-size: 24px;
+    font-size: 1.3em;
     font-style: normal;
     font-weight: 400;
     margin: 0px 0px 50px 0px;
