--- a/src/screens/SectionFour/styles.css
+++ b/src/screens/SectionFour/styles.css
@@ -1,26 +1,27 @@
 
 .sectionFour {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100%;
-    padding: 0px 50px 0px 200px;
-    position: relative;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  position: relative;
 }
 .cardFour {
+  margin-left: 90px;
   width: 35%;
   height: auto;
-  gap: 2rem;
+  gap: 3rem;
   border-radius: 30px;
   background: #ffffff1a;
   background-blend-mode: soft-light, normal;
   box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
   backdrop-filter: blur(20px);
-  padding: 30px 50px;
+  padding: 40px 50px 80px;
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center; 
 }
 .titleFour {
     color: #FFF;
