--- a/src/screens/SectionThree/styles.css
+++ b/src/screens/SectionThree/styles.css
@@ -14,11 +14,12 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100.044%; 
+    margin: 0px;
 }
 .subSectionThree {
     color: #FFF;
     font-family: 'Inter';
-    font-size: 32px;
+    font-size: 1.5em;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
