--- a/src/components/buttonComponent/styles.css
+++ b/src/components/buttonComponent/styles.css
@@ -1,42 +1,31 @@
 
-
-.buttonStyle {
-    background-image:
-        linear-gradient(#7B7B7B, #7B7B7B),
-        linear-gradient(8deg, #62FEE2, var(--button-bg-border-end));
-
-    background-origin: border-box;
-    background-clip: padding-box, border-box;
-
-    &:hover {
-    --button-bg-border-end: #7B7B7B;
-    }
-    
-    &:focus:not(:active) {
-    --button-bg-border-start: #62FEE2;
-    --button-bg-border-end: #62FEE2;
-    }
-}
-
 .buttonStyle {
     background-color: #ffffff5c;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
-    width: 333px;
-    height: 64px;
-    border-radius: 10px;
+    width: 18%;
+    height: 50px;
+    border-radius: 0px;
     align-items: center;
     justify-content: center;
     display: flex;
     cursor: pointer;
-    border-width: 2px; 
-    border-color: transparent;
+    border: 2px solid transparent; 
+    border-image: linear-gradient(to right, hsl(0, 0%, 60%), hsl(0, 0%, 60%));
+    border-image-slice: 1;
+}
+.buttonStyle:hover {
+    border-image: linear-gradient(to right, hsl(0, 0%, 60%), hsl(173, 100%, 60%));
+    border-image-slice: 1;
 }
 
 .textButton {
     color: #FFF;
     text-align: center;
     font-family: 'Poppins';
-    font-size: 24px;
-    font-weight: 500;
+    font-size: 1.3em;
+    font-weight: 400;
     margin: 0px;
+}
+.textButton:hover {
+    color: #00FFE1;
 }
