--- a/src/screens/SectionSix/styles.css
+++ b/src/screens/SectionSix/styles.css
@@ -1,15 +1,15 @@
 .sectionSix {
     justify-content: center;
     display: flex;
+    align-items: center;
     flex-direction: column;
     height: 100vh;
     width: 100%;
-    margin-left: 200px;
 }
 .containerTextSix {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 85%;
     align-items: flex-start;
     justify-content: center;
 }
