--- a/src/components/Languaje/styles.css
+++ b/src/components/Languaje/styles.css
@@ -58,3 +58,10 @@
     font-family: 'Poppins';
     font-weight: 400;
 }
+
+
+@media (min-width: 390px) {
+    .containerLanguage {
+        width: auto;
+    }
+}
