--- a/src/components/buttonFour/styles.css
+++ b/src/components/buttonFour/styles.css
@@ -22,3 +22,10 @@
     font-weight: 500;
     margin: 0px;
 }
+
+@media (min-width: 390px) {
+    .textButtonFour {
+        font-size: 1.3em;
+    }
+    
+}
