--- a/src/screens/SectionFive/styles.css
+++ b/src/screens/SectionFive/styles.css
@@ -30,3 +30,15 @@
     flex-direction: row;
     gap: 2rem;
 }
+
+
+@media (min-width: 390px) {
+    .titleFive {
+        font-size: 2em;
+    }
+    .containerDragCard {
+        overflow: hidden;
+        justify-content: flex-start;
+    }
+    
+}
