--- a/src/screens/SectionSeven/styles.css
+++ b/src/screens/SectionSeven/styles.css
@@ -67,3 +67,21 @@
     width: 100%;
     border: 0.5px solid white;
 }
+
+@media (min-width: 390px) {
+    .titleSeven {
+        font-size: 3em;
+    }
+    .ask {
+        width: 90%;
+    }
+    .question p {
+        font-size: .7em;
+        font-weight: 400;
+        width: 80%;
+    }
+    .containerSecSeven {
+        justify-content: center;
+    }
+    
+}
