--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -121,3 +121,27 @@
     font-weight: 400;
     padding: 0px 20px;
 }
+
+
+@media (min-width: 390px) {
+    .titleSectionTwo {
+        width: 80%;
+        font-size: 2.5em;
+    }
+    .containerPill {
+        border: 1px solid white;
+    }
+    .textPill {
+        font-size: 1em;
+    }
+    .pillsRow {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        overflow: hidden;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        height: 300px;
+    }
+}
