--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -63,7 +63,7 @@
     }
 }
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px) {
     .card {
         display: flex;
         flex-direction: column-reverse;
