--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -21,7 +21,7 @@
 }
 
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px){
     .containerLogo {
         display: flex;
         width: auto;
