--- a/src/components/TextMove/styles.css
+++ b/src/components/TextMove/styles.css
@@ -36,7 +36,7 @@
 }
 
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px){
     .textMoveContainer {
         height: 30vh;
     }
