--- a/src/components/Inputs/styles.css
+++ b/src/components/Inputs/styles.css
@@ -131,7 +131,7 @@
   margin: 0px;
 }
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px){
   .containerTotalInput {
     width: 270px;
     height: auto;
@@ -140,8 +140,48 @@
     background: #1E1E1E;
     position: relative;
     padding: 30px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .containerInput {
+    width: 100%;
   }
   .inputWrapper {
     width: 100%;
+    justify-content: center;
+  }
+  .inputs {
+    padding-left: 10px;
+  }
+  .containerItemUno {
+    position: absolute;
+    top: 100px;
+    left: auto; 
+    margin-left: 0px;
+    background-color: #1E1E1E;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.519);
+    z-index: 1000;
+    width: 90%;
+  }
+  .infoMessage {
+    position: absolute;
+    top: 100px;
+    left: auto; 
+    margin-left: 0px;
+    background-color: #1E1E1E;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.519);
+    z-index: 1000;
+    width: 90%;
+  }
+  .itemUno, .itemDos {
+    color: #FFF;
+    font-family: 'Poppins';
+    font-size: .7em;
   }
 }
