--- a/src/components/Switch/styles.css
+++ b/src/components/Switch/styles.css
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px) {
     .switch {
         width: 50%;
     }
