--- a/src/components/buttonFour/styles.css
+++ b/src/components/buttonFour/styles.css
@@ -1,31 +1,48 @@
-
-
-.buttonFour {
-    background-color: #ffffff00;
-    width: 100%;
-    height: 64px;
-    border-radius: 10px;
+.containerButtonFour {
+    width: auto;
+    display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+}
+.buttonFour {
+    background-color: #ffffff5c;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    width: 100%;
+    height: 50px;
+    border-radius: 0px;
+    align-items: center;
+    justify-content: space-between;
     display: flex;
     cursor: pointer;
-    padding: 0px 15px;
-    border: 1px solid #7B7B7B;  
+    border: 2px solid transparent; 
+    border-image: linear-gradient(to right, hsl(0, 0%, 60%), hsl(0, 0%, 60%));
+    border-image-slice: 1;
+    padding: 20px;
 }
-
+.buttonFour:hover {
+    border-image: linear-gradient(to right, hsl(0, 0%, 60%), hsl(173, 100%, 60%));
+    border-image-slice: 1;
+}
 
 .textButtonFour {
     color: #FFF;
     text-align: start;
     font-family: 'Poppins';
-    font-size: 1.4em;
-    font-weight: 500;
+    font-size: 1.3em;
+    font-weight: 400;
     margin: 0px;
 }
+.textButtonFour:hover {
+    color: #00FFE1;
+}
 
-@media (min-width: 390px) {
-    .textButtonFour {
-        font-size: 1.3em;
+@media (min-width: 360px) and (max-width: 576px){
+    .buttonFour {
+        width: 100%;
+        padding: 10px;
+        gap: 1em;
     }
-    
+    .textButtonFour {
+        font-size: 1em;
+    }
 }
