--- a/src/screens/SectionFour/styles.css
+++ b/src/screens/SectionFour/styles.css
@@ -1,17 +1,20 @@
-
 .sectionFour {
   justify-content: center;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 100vh;
   width: 100%;
   position: relative;
+  align-items: center;
+  gap: 3rem;
 }
+
+
 .cardFour {
-  margin-left: 90px;
-  width: 35%;
+  width: 60%;
   height: auto;
   gap: 3rem;
+  margin-left: 2rem;
   border-radius: 30px;
   background: #ffffff1a;
   background-blend-mode: soft-light, normal;
@@ -23,16 +26,18 @@
   flex-direction: column;
   justify-content: center; 
 }
+
 .titleFour {
-    color: #FFF;
-    text-shadow: 0px 4px 184px #000, 0px 4px 134px #000;
-    font-family: 'Poppins';
-    font-size: 2.3em;
-    font-style: normal;
-    font-weight: 500;
-    width: 100%;
-    margin: 0px;
+  color: #FFF;
+  text-shadow: 0px 4px 184px #000, 0px 4px 134px #000;
+  font-family: 'Poppins';
+  font-size: 2.3em;
+  font-style: normal;
+  font-weight: 500;
+  width: 100%;
+  margin: 0px;
 }
+
 .containerBtnFour {
   display: flex;
   gap: 1rem;
@@ -40,20 +45,32 @@
   width: 100%;
 }
 
-
 .pixImage {
   left: 0;
   top: 0;
   position: absolute;
   width: 30%;
 }
+.containerMoveImageFour {
+  margin-right: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: bisque;
+  height: 500px;
+}
+.moveImage {
+  width: 100%;
+}
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px) {
   .pixImage {
     display: none;
   }
   .sectionFour {
     align-items: center;
+    flex-direction: column;
   }
   .cardFour {
     margin: 0px;
@@ -70,7 +87,10 @@
     width: 100%;
     align-items: center;
     justify-content: flex-start;
-    overflow: hidden;
+    overflow-x: auto; 
+    white-space: nowrap;
   }
-  
+  .containerBtnFour button {
+    flex: 0 0 auto; 
+  }
 }
