--- a/src/screens/SectionThree/styles.css
+++ b/src/screens/SectionThree/styles.css
@@ -26,7 +26,7 @@
 }
 
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px) {
     .titleSectionThree {
         font-size: 3em;
     }
