--- a/src/screens/styles.css
+++ b/src/screens/styles.css
@@ -1,3 +1,4 @@
+
 .containerCompany {
     display: flex;
     height: auto;
@@ -63,7 +64,7 @@
     }
 }
 
-@media (min-width: 390px) {
+@media (min-width: 360px) and (max-width: 576px){
     .megapixHome {
         width: 100%;
     }
