--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -69,7 +69,7 @@
         flex-direction: column-reverse;
     }
     .containerCard {
-        padding: 30px 20px;
+        padding: 50px 20px;
     }
     .tituloCard {
         font-size: 4em;
@@ -78,11 +78,7 @@
         width: 50%;
     }
     .textCard {
-        color: #FFF;
-    font-family: 'Poppins';
-    font-size: 1em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%;
+        font-size: .9em;
+        font-weight: 300;
     }
 }
