--- a/src/components/Languaje/styles.css
+++ b/src/components/Languaje/styles.css
@@ -62,6 +62,6 @@
 
 @media (min-width: 360px) and (max-width: 576px){
     .containerLanguage {
-        width: auto;
+        width: 100%;
     }
 }
