--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -24,14 +24,15 @@
 @media (min-width: 360px) and (max-width: 576px){
     .containerLogo {
         display: flex;
-        width: auto;
-        align-items: center;
-        justify-content: flex-start;      
+        width: 100%;      
     }
     .logo {
-        width: 30%;
+        width: 80%;
     }
     .containerNav {
-        flex-direction: column;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
     }
 }
