--- a/src/components/Languaje/styles.css
+++ b/src/components/Languaje/styles.css
@@ -65,3 +65,9 @@
         width: 100%;
     }
 }
+
+@media (min-width: 577px) and (max-width: 768px) {
+    .containerLanguage {
+        width: 100%;
+    }
+}
