--- a/src/screens/styles.css
+++ b/src/screens/styles.css
@@ -86,3 +86,48 @@
         justify-content: space-around;
     }
 }
+
+@media (min-width: 577px) and (max-width: 768px) {
+    .megapixHome {
+        width: 100%;
+    }
+    .coinFour {
+        width: 30%;
+    }
+    .coinOne {
+        width: 30%;
+    }
+    .containerCoinUno {
+        top: 20px;
+        height: 90vh;
+        justify-content: space-around;
+        overflow: hidden;
+    }
+    .containerCoinDos {
+        top: 20px;
+        height: 90vh;
+        justify-content: space-around;
+    }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+    .megapixHome {
+        width: 100%;
+    }
+    .coinFour {
+        width: 30%;
+    }
+    .coinOne {
+        width: 30%;
+    }
+    .containerCoinUno {
+        top: 20px;
+        height: 90vh;
+        justify-content: space-around;
+        overflow: hidden;
+    }
+    .containerCoinDos {
+        top: 20px;
+        height: 90vh;
+        justify-content: space-around;
+    }
+}
