--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -36,3 +36,19 @@
         width: 100%;
     }
 }
+
+@media (min-width: 577px) and (max-width: 768px) {
+    .containerLogo {
+        display: flex;
+        width: 100%;      
+    }
+    .logo {
+        width: 80%;
+    }
+    .containerNav {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+    }
+}
