--- a/src/components/TextMove/styles.css
+++ b/src/components/TextMove/styles.css
@@ -44,3 +44,11 @@
         font-size: 4em;
     }
 }
+@media (min-width: 577px) and (max-width: 768px) {
+    .textMove {
+        font-size: 4em;
+    }
+    .textMoveContainer {
+        height: 30vh;
+    }
+}
