--- a/src/screens/SectionOne/styles.css
+++ b/src/screens/SectionOne/styles.css
@@ -27,4 +27,14 @@
         padding: 30px 0px;
     }
 }
+@media (min-width: 577px) and (max-width: 768px) {
+    .containerSectionOne {
+        height: auto;
+        width: 100%;
+    }
+    .titleSectionOne {
+        font-size: 4em;
+        padding: 30px 0px;
+    }
+}
 
