--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -145,3 +145,35 @@
         height: 300px;
     }
 }
+@media (min-width: 577px) and (max-width: 768px) {
+    .titleSectionTwo {
+        width: 80%;
+        font-size: 4em;
+    }
+    .containerPill {
+        border: 2px solid white;
+    }
+    .textPill {
+        font-size: 1em;
+    }
+    .pillsRow {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        overflow: hidden;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        height: 300px;
+    }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+    .titleSectionTwo {
+        width: 90%;
+    }
+    .pillsRow {
+        overflow: hidden;
+        width: 100%;
+        height: 400px;
+    }
+}
