--- a/src/screens/SectionSix/styles.css
+++ b/src/screens/SectionSix/styles.css
@@ -45,19 +45,21 @@
     padding: 20px 0px;
     width: 80%;
 }
-
+.itemList {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+}
 .containerVideosSix {
     display: flex;
     align-items: center;
-    justify-content: center;
     width: 100%;
-    height: 500px;
-    position: relative;
-    overflow: hidden;
-    margin: 0px 40px;
 }
-
-
+.videoGif {
+    width: 900px; 
+    height: auto;
+}
 
 
 @media (min-width: 360px) and (max-width: 576px) {
@@ -79,20 +81,13 @@
         width: 90%;
     }
     .containerVideosSix {
-        width: 300px;
-        height: 300px;
+        gap: 3em;
+        width: 350px;
+        height: auto;
+        flex-direction: column-reverse;
     }
-    .imgA  {
-        width: 300px;
-        height: 300px;
-    }
-    .imgB {
-        width: 230px;
-        height: 230px;
-    }
-    .imgC {
-        width: 150px;
-        height: 150px;
+    .videoGif {
+        width: 400px;
     }
 }
 @media (min-width: 577px) and (max-width: 768px) {
@@ -111,22 +106,15 @@
     }
     .containerTextSix {
         padding: 0px;
-        width: 90%;
+        width: 100%;
     }
     .containerVideosSix {
-        width: 300px;
-        height: 300px;
+        gap: 3em;
+        width: 350px;
+        height: auto;
+        flex-direction: column-reverse;
     }
-    .imgA  {
-        width: 300px;
-        height: 300px;
-    }
-    .imgB {
-        width: 230px;
-        height: 230px;
-    }
-    .imgC {
-        width: 150px;
-        height: 150px;
+    .videoGif {
+        width: 400px;
     }
 }
