--- a/src/components/TextMove/styles.css
+++ b/src/components/TextMove/styles.css
@@ -52,3 +52,8 @@
         height: 30vh;
     }
 }
+@media (min-width: 993px) and (max-width: 1200px) {
+    .textMove {
+        font-size: 5em;
+    }
+}
