--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -177,3 +177,8 @@
         height: 400px;
     }
 }
+@media (min-width: 993px) and (max-width: 1200px) {
+    .titleSectionTwo {
+        width: 90%;
+    }
+}
