--- a/src/screens/SectionFive/styles.css
+++ b/src/screens/SectionFive/styles.css
@@ -67,3 +67,15 @@
         width: 90%;
     }
 }
+
+@media (min-width: 769px) and (max-width: 992px)  {
+    .titleFive {
+        font-size: 4em;
+        text-align: center;
+        width: 70%;
+    }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+
+}
