--- a/src/components/Inputs/styles.css
+++ b/src/components/Inputs/styles.css
@@ -1,14 +1,3 @@
-.containerTotalInput {
-  position: relative;
-}
-
-.containerMonto {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1rem;
-}
-
 .monto {
   color: #FFF;
   font-family: 'Poppins';
@@ -19,169 +8,46 @@
   letter-spacing: 0.16px;
 }
 
-.containerInput {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-}
-
 .inputs {
-  width: 557px;
+  width: 100%;
   height: 40px;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.36) 0%, rgba(217, 255, 248, 0.36) 100%);
   border: 2px solid #62FEE2;
   border-radius: 10px;
   box-shadow: 0px 4.713px 4.713px 0px rgba(0, 0, 0, 0.25) inset;
   backdrop-filter: blur(21.028px);
-  padding-left: 30px;
+  padding-left: 20px;
   border: 1px solid #ccc;
   font-size: 16px;
   line-height: 24px;
+  position: relative;
+  box-sizing: border-box; 
+  color: white;
 }
 
-.inputWrapper {
-  position: relative;
+.flag-container {
+  position: absolute;
+  top: 70%;
+  right: 25px; 
+  transform: translateY(-50%); 
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  height: 100%;
 }
 
 .flagIcon {
   width: 20px;
-  height: 15px;
+  height: 14px;
+  margin-right: 4px;
 }
 
-.containerFlagInput {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  right: 10px;
-}
-
-.countryOk {
-  color: #828282;
-  font-family: 'Poppins';
-  font-size: 0.8em;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 0.18px;
-}
-
-.infoMessage {
-  position: absolute;
-  top: 50%;
-  left: 100%; 
-  margin-left: 10px;
-  background-color: rgba(255, 255, 255, 0.10);
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  transform: translateY(-50%);
-  width: 50%;
-}
-
-.containerItemUno {
-  position: absolute;
-  top: 50%;
-  left: -350px;
-  background-color: rgba(255, 255, 255, 0.10);
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  transform: translateY(-50%);
-  width: 50%;
-  display: flex;
-  justify-content: center;
-}
-
-.itemUno, .itemDos {
+.currency-label {
   color: #FFF;
   font-family: 'Poppins';
-  font-size: 1em;
-  width: 100%;
-  font-style: normal;
-  text-align: center;
+  font-size: .8em;
   font-weight: 500;
-  line-height: normal;
 }
 
-.btnCobro {
-  border-radius: 13.845px;
-  background: #62FEE2;
-  width: 100%;
-  border: none;
-  margin-top: 20px;
-  cursor: pointer;
-}
 
-.cobrar {
-  color: #000;
-  text-align: center;
-  font-family: 'Poppins';
-  font-size: 1.5em;
-  font-weight: 400;
-  padding: 8px;
-  margin: 0px;
-}
 
-@media (min-width: 360px) and (max-width: 576px){
-  .containerTotalInput {
-    width: 270px;
-    height: auto;
-    flex-shrink: 0;
-    border-radius: 20px;
-    background: #1E1E1E;
-    position: relative;
-    padding: 30px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-  }
-  .containerInput {
-    width: 100%;
-  }
-  .inputWrapper {
-    width: 100%;
-    justify-content: center;
-  }
-  .inputs {
-    padding-left: 10px;
-  }
-  .containerItemUno {
-    position: absolute;
-    top: 100px;
-    left: auto; 
-    margin-left: 0px;
-    background-color: #1E1E1E;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.519);
-    z-index: 1000;
-    width: 90%;
-  }
-  .infoMessage {
-    position: absolute;
-    top: 100px;
-    left: auto; 
-    margin-left: 0px;
-    background-color: #1E1E1E;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.519);
-    z-index: 1000;
-    width: 90%;
-  }
-  .itemUno, .itemDos {
-    color: #FFF;
-    font-family: 'Poppins';
-    font-size: .7em;
-  }
-}
+
